# crypto-wasm

./: .gitignore  Cargo.toml  README.md  package.json
bench/: fixture.json  md5.js  package.json  sha256.js
src/: lib.rs
